--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<!doctype html>
 <html>
-<body>
-Once in a lifetime chance:
-Get 10% off of Experimental Soup from Oscar The Grouch's Kitchen 
-</body>
+  <head>
+    <title>Oscar's Amazing Soup!</title>
+  </head>
+  <body>
+    Once in a lifetime chance:
+    Get 10% off of Experimental Soup from Oscar The Grouch's Kitchen 
+  </body>
 </html>
